--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -1,5 +1,8 @@
 {
     "label.creator": "Created by John Arby \"Kenny\" Arceo",
     "label.ip.address": "IP Address",
-    "label.logout": "Logout"
+    "label.logout": "Logout",
+    "label.login": "Login",
+    "label.username": "Username",
+    "label.password": "Password"
 }
