--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -4,5 +4,9 @@
     "label.logout": "Logout",
     "label.login": "Login",
     "label.username": "Username",
-    "label.password": "Password"
+    "label.password": "Password",
+    "label.remember.me": "Remember Me",
+
+    "message.login.success": "Login Successfully",
+    "message.logout.success": "Logout Successfully"
 }
